--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajv": "^6.5.4",
     "bootstrap": "^4.1.3",
     "cross-fetch": "^2.2.2",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.4",
     "prop-types": "^15.6.2",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
